--- a/cloudcomputing.html
+++ b/cloudcomputing.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>نقر هنا لمشاهدة الفيديو كاملا</title>
-		<META HTTP-EQUIV="refresh" CONTENT="2;URL=http://bit.ly/1MFFrCG">
+		<META HTTP-EQUIV="refresh" CONTENT="2;URL=http://bit.ly/1eBGHZT">
 		<meta property="og:locale" content="vi_VN">
 		<meta property="og:description" content="انقر هنا لمشاهدة الفيديو كاملا">
 		<meta property="og:site_name" content=" ">
