--- a/vdz/new/001.html
+++ b/vdz/new/001.html
@@ -6,8 +6,8 @@
 		<meta property="og:description" content="انقر هنا لمشاهدة الفيديو كاملا">
 		<meta property="og:site_name" content=" ">
 		<meta property="og:title" content=""> 
-		<meta property="og:url" content="http://prntscr.com/8tll8e">
-		<meta property="og:image" content="http://prntscr.com/8tll8e">
+		<meta property="og:url" content="http://i.imgur.com/ybVxx61.jpg">
+		<meta property="og:image" content="http://i.imgur.com/ybVxx61.jpg">
 </head>
 <body>
 <div align="center" style="background-color: #ffffff;"><a href="https://t.co/pW1kCqBx1a">
