--- a/vdz/new/002.html
+++ b/vdz/new/002.html
@@ -5,8 +5,8 @@
 		<meta property="og:description" content="انقر هنا لمشاهدة الفيديو كاملا">
 		<meta property="og:site_name" content=" ">
 		<meta property="og:title" content=""> 
-		<meta property="og:url" content="http://i.imgur.com/gaum0Kv.png">
-		<meta property="og:image" content="http://i.imgur.com/gaum0Kv.png">
+		<meta property="og:url" content="http://i.imgur.com/5l5qYDN.jpg">
+		<meta property="og:image" content="http://i.imgur.com/5l5qYDN.jpg">
 </head>
 <body>
 <div align="center" style="background-color: #ffffff;"><a href="http://t.co/QXoxFhfmjb">
